[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/ui/kenvector_future.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ui/team_selection/leader_select_menu_panel.gd" type="Script" id=2]
[ext_resource path="res://map/tool/color_replace.tres" type="Shader" id=3]
[ext_resource path="res://ui/team_selection/leader_portrait.gd" type="Script" id=4]
[ext_resource path="res://ui/team_selection/leader_select_menu_button.gd" type="Script" id=5]
[ext_resource path="res://assets/ui/leaders_icons.png" type="Texture" id=6]
[ext_resource path="res://assets/ui/design.png" type="Texture" id=7]
[ext_resource path="res://assets/ui/EquipmentPro.ttf" type="DynamicFontData" id=9]

[sub_resource type="StyleBoxFlat" id=34]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=1]
size = 11
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 7 )
region_rect = Rect2( 105, 0, 35, 35 )
margin_left = 3.0
margin_right = 3.0
margin_top = 3.0
margin_bottom = 3.0

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 7 )
region_rect = Rect2( 70, 0, 35, 35 )
margin_left = 3.0
margin_right = 3.0
margin_top = 3.0
margin_bottom = 3.0

[sub_resource type="StyleBoxEmpty" id=31]

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 7 )
region_rect = Rect2( 145, 37, 33, 33 )
margin_left = 2.0
margin_right = 2.0
margin_top = 2.0
margin_bottom = 2.0

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 35, 35 )
margin_left = 3.0
margin_right = 3.0
margin_top = 3.0
margin_bottom = 3.0

[sub_resource type="ShaderMaterial" id=30]
shader = ExtResource( 3 )
shader_param/origin = Color( 0.305882, 0.388235, 0.52549, 1 )
shader_param/origin2 = Color( 0.32549, 0.584314, 0.709804, 1 )
shader_param/origin3 = Color( 0.47451, 0.803922, 0.819608, 1 )
shader_param/origin4 = Color( 0.2, 0.266667, 0.380392, 1 )
shader_param/new = Color( 0.537255, 0.317647, 0.4, 1 )
shader_param/new2 = Color( 0.843137, 0.396078, 0.396078, 1 )
shader_param/new3 = Color( 0.929412, 0.627451, 0.568627, 1 )
shader_param/new4 = Color( 0.462745, 0.219608, 0.294118, 1 )
shader_param/tolerance = 0.1

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 32, 32 )

[sub_resource type="DynamicFont" id=35]
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=32]
size = 13
extra_spacing_top = -3
extra_spacing_bottom = -3
extra_spacing_char = -3
extra_spacing_space = -3
font_data = ExtResource( 9 )

[sub_resource type="StyleBoxFlat" id=33]
content_margin_left = 2.0
bg_color = Color( 0.74902, 0.207843, 0.207843, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
expand_margin_left = 1.0
expand_margin_right = 1.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0

[node name="leader_select_menu_panel" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -384.0
margin_bottom = -550.0
custom_styles/panel = SubResource( 34 )
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 211.0
margin_bottom = 45.0

[node name="button" type="Button" parent="HBoxContainer"]
margin_right = 36.0
margin_bottom = 36.0
rect_min_size = Vector2( 36, 36 )
focus_mode = 1
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 31 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
expand_icon = true
script = ExtResource( 5 )

[node name="sprite" type="Sprite" parent="HBoxContainer/button"]
material = SubResource( 30 )
position = Vector2( 18, 18 )
scale = Vector2( 0.45, 0.45 )
texture = ExtResource( 6 )
hframes = 12
script = ExtResource( 4 )

[node name="touch_button" type="TouchScreenButton" parent="HBoxContainer/button"]
position = Vector2( -3, -3 )
scale = Vector2( 0.7, 0.7 )
shape = SubResource( 8 )

[node name="Label" type="Label" parent="HBoxContainer"]
margin_left = 40.0
margin_right = 206.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 35 )
text = "LEADER NAME"
align = 1
valign = 1

[node name="VBoxContainer" type="HBoxContainer" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 211.0
margin_bottom = 15.0
size_flags_vertical = 0
alignment = 2

[node name="Button" type="Button" parent="VBoxContainer"]
margin_left = 196.0
margin_right = 206.0
margin_bottom = 10.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/hseparation = 0
custom_fonts/font = SubResource( 32 )
custom_styles/hover = SubResource( 33 )
custom_styles/pressed = SubResource( 33 )
custom_styles/focus = SubResource( 33 )
custom_styles/disabled = SubResource( 33 )
custom_styles/normal = SubResource( 33 )
text = "X"

[connection signal="button_down" from="HBoxContainer/button" to="HBoxContainer/button" method="_button_down"]
[connection signal="select_leader" from="HBoxContainer/button" to="." method="_select_leader"]
[connection signal="pressed" from="HBoxContainer/button/touch_button" to="HBoxContainer/button" method="_button_down"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_x_button_pressed"]
